--- a/src/app/components/quizz/quizz.component.html
+++ b/src/app/components/quizz/quizz.component.html
@@ -1,6 +1,6 @@
 <div class="quizz__container">
     <div class="quizz_logo">
-        <img src="assets/imgs/logo_teste.png" alt="" srcset="">
+        <img src="assets/imgs/logo_teste.jpg" alt="" srcset="">
         <h3>{{title}}</h3>
     </div>
     <div *ngIf="!finished" class="quizz_questions">
